# Project_Parva

./: .dockerignore  .env.example  .gitattributes  .gitignore  .vibecop.yml  CHANGELOG.md  CONTRIBUTING.md  DECISIONS_LOG.md  Dockerfile  KNOWN_ISSUES.md  LICENSE  Makefile  PROJECT_BIBLE.md  Project Proposal Sample.docx  README.md  ROADMAP.md  SECURITY.md  SESSION_RECOVERY.md  TASK.md  TECHNICAL_README.md  THIRD_PARTY_NOTICES.md  evaluation.md  pyproject.toml  render.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.playwright-cli/: page-2026-03-17T07-28-27-205Z.yml  page-2026-03-17T07-28-28-907Z.yml
backend/: evaluation.csv  evaluation.md
benchmark/: README.md  checksums.sha256  harness.py  run_all_packs.py  run_benchmark.sh  summary.md  validate_pack.py
data/: festival_name_map.json  normalized_sources.json  transparency_log.json
docs/: ACCOUNT_SYNC_FOUNDATION.md  ACCURACY_METHOD.md  ADR_0001_TRUST_ROUTE_POLICY.md  ALGORITHM_FLOWCHARTS.md  API_CONTRACTS.md  API_ERROR_HANDLING.md  API_GETTING_STARTED.md  API_LIFECYCLE.md  API_QUICKSTART.md  API_REFERENCE.md  API_REFERENCE_V3.md  API_USAGE_POLICY.md  ARCHITECTURE_BOUNDARIES.md  ARCHIVE_HARVEST_QUEUE.md  AS_BUILT.md  BENCHMARK_SPEC.md  BENCHMARK_SURVEY.md  BS_CONVERSION_COMPARISON.md  BS_CONVERSION_STRATEGY.md  BS_EXTENDED_VALIDATION.md  BS_OVERLAP_REPORT.md  CANONICAL_ENGINE_ADR_2026-03-20.md  CLOSED_BETA_OPERATIONS.md  COMMERCIAL_OFFERING.md  CROSS_CALENDAR_RESOLVER.md  DATA_BACKFILL_INVENTORY.md  DATA_SOURCES.md  DATA_SOURCES_AND_LICENSES.md  DATE_ACCURACY_EVALUATION.md  DEPLOYMENT.md  DEPLOYMENT_RUNBOOK.md  DIFFERENTIAL_TESTING.md  DIGITAL_PROVIDER_POOL.md  DISCREPANCY_TRIAGE.md  EMBED_GUIDE.md  ENGINE_ARCHITECTURE.md  EPHEMERIS_ACCURACY.md  EVALUATION_METHODOLOGY.md  EVALUATION_REPORT.md  EVALUATOR_GUIDE.md  (+103 more)
examples/: panchanga_embed.html
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
requirements/: constraints.txt
scripts/: annual_rerun.sh  check_accuracy_gate.py  check_differential_gate.py  check_docs_links.py  check_path_leaks.py  generate_accuracy_report.py  generate_authority_dashboard.py  generate_scorecard.py  (+11 more)
sdk/python/: README.md  pyproject.toml
sdk/python/parva/: __init__.py
sdk/python/parva_sdk/: __init__.py  client.py  exceptions.py  models.py
(+2380 files in other folders)
