[build-system]
requires = ["setuptools>=82.0.1", "wheel>=0.45.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project-parva"
version = "3.0.0"
description = "Nepal Festival Discovery System"
requires-python = ">=3.11,<3.12"
license = { text = "AGPL-3.0-or-later" }
readme = "README.md"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "pyswisseph>=2.10.0",
    "numpy>=1.26.0",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11.0",
    "pip-audit>=2.8.0",
    "ruff>=0.8.0",
    "setuptools>=82.0.1",
]
test = [
    "httpx>=0.27.0",
    "pytest>=9.0.2",
]
ops = [
    "aiohttp>=3.9.0",
]

[tool.pytest.ini_options]
pythonpath = [".", "backend"]
testpaths = ["tests", "backend/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
follow_imports = "silent"
files = [
    "backend/app/bootstrap",
    "backend/app/reliability",
    "backend/app/cache/precomputed.py",
    "backend/app/api/public_artifacts_routes.py",
    "backend/app/api/spec_routes.py",
    "backend/app/calendar/tithi/tithi_core.py",
]

[tool.setuptools]
package-dir = { "" = "backend" }

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]
