[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parva-sdk"
version = "3.0.0"
description = "Typed Python SDK for Project Parva authority-track APIs"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.27.0"
]

[tool.setuptools]
packages = ["parva_sdk"]
